--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2em;
 }
 
 .card {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4px 10px;
-  padding: 2em;
+  gap: 4px 30px;
 }
