create login form + todos, learn eventHandlers and more

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 #root {
   max-width: 1280px;
   margin: 0;
@@ -13,4 +15,9 @@
   justify-content: center;
   align-items: center;
   gap: 4px 30px;
+}
+
+.button {
+  @apply rounded-lg border border-transparent py-[0.6em] px-[1.2em] text-base 
+      font-medium text-inherit bg-[#1a1a1a] cursor-pointer transition duration-300 hover:border-blue-700;
 }
