--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,5 @@
 }
 
 .button {
-  @apply rounded-lg border border-transparent py-[0.6em] px-[1.2em] text-base 
-      font-medium text-inherit bg-[#1a1a1a] cursor-pointer transition duration-300 hover:border-blue-700;
+  @apply rounded-lg border border-transparent py-[0.6em] px-[1.2em] text-base font-medium text-inherit bg-[#1a1a1a] cursor-pointer transition duration-300 hover:border-blue-700;
 }
